--- a/mlflow/server/js/public/index.html
+++ b/mlflow/server/js/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="shortcut icon" href="./static-files/favicon.ico" />
+    <link rel="shortcut icon" href="./static-files/favicon.ico" crossorigin="use-credentials"/>
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
